--- a/manage/index.html
+++ b/manage/index.html
@@ -275,13 +275,13 @@
 
         <!-- Blog Section -->
         <div class="section-header">
-            <h1>Blog Section</h1>
+            <h1>Blog Section - Add New Posts Only</h1>
         </div>
 
         <div class="form-container">
-            <!-- Blog Post Add/Update Form -->
+            <!-- Blog Post Add Form -->
             <form id="blog-form" class="blog-form">
-                <h2 id="blog-form-title">Add/Update Blog Post</h2>
+                <h2 id="blog-form-title">Add New Blog Post</h2>
                 
                 <label for="blog-category">Category:</label>
                 <select id="blog-category" name="category" required>
@@ -293,22 +293,22 @@
                 </select>
 
                 <label for="blog-uid">UID:</label>
-                <input type="text" id="blog-uid" name="uid" placeholder="e.g., tech_001">
+                <input type="text" id="blog-uid" name="uid" placeholder="e.g., tech_001" required>
 
                 <label for="blog-title">Title:</label>
-                <input type="text" id="blog-title" name="title">
+                <input type="text" id="blog-title" name="title" required>
 
                 <label for="blog-date">Date:</label>
-                <input type="text" id="blog-date" name="date" placeholder="e.g., Sep 12, 2024">
+                <input type="text" id="blog-date" name="date" placeholder="e.g., Sep 12, 2024" required>
 
                 <label for="blog-excerpt">Excerpt:</label>
-                <input type="text" id="blog-excerpt" name="excerpt">
+                <input type="text" id="blog-excerpt" name="excerpt" required>
 
                 <label for="blog-thumbnail">Thumbnail URL:</label>
-                <input type="text" id="blog-thumbnail" name="thumbnail">
+                <input type="text" id="blog-thumbnail" name="thumbnail" required>
 
                 <label for="blog-link">Link:</label>
-                <input type="text" id="blog-link" name="link">
+                <input type="text" id="blog-link" name="link" required>
 
                 <label for="blog-subcategory">Subcategory (Optional):</label>
                 <input type="text" id="blog-subcategory" name="subcategory">
@@ -321,18 +321,18 @@
 
                 <div class="form-actions">
                     <label>
-                        <input type="checkbox" id="is-new-post" name="isNewPost">
+                        <input type="checkbox" id="is-new-post" name="isNewPost" checked>
                         <span>✓ ADD AS NEW POST</span>
                     </label>
                     <div style="font-size: 12px; margin-top: 5px; opacity: 0.9;">
-                        Check this box to add a completely new blog post. Leave unchecked to update an existing post.
+                        This form only adds new blog posts. Make sure all required fields are filled.
                     </div>
                 </div>
 
                 <label for="blog-key">Password:</label>
                 <input type="password" id="blog-key" name="key" required>
 
-                <button type="submit">Submit</button>
+                <button type="submit">Add New Post</button>
                 <button type="button" id="clear-blog-form">Clear Form</button>
             </form>
         </div>
