--- a/manage/index.html
+++ b/manage/index.html
@@ -275,7 +275,7 @@
 
         <!-- Blog Section -->
         <div class="section-header">
-            <h1>Blog Section - Add New Posts Only</h1>
+            <h1>Blog Section</h1>
         </div>
 
         <div class="form-container">
