--- a/vibrate/index.html
+++ b/vibrate/index.html
@@ -57,7 +57,7 @@
     <button id="restartBtn">Restart</button>
   </div>
 
-  <video id="video" src="haptic.mp4"></video>
+  <video id="video" src="https://darxksggvdigcwu2.public.blob.vercel-storage.com/haptic.mp4"></video>
 
   <!-- Seek bar -->
   <div class="seekbar">
