--- a/manage/index.html
+++ b/manage/index.html
@@ -23,12 +23,12 @@
     <!-- Content Forms-->
     <div id="content-container" class="content-container" style="display:none;">
 
-        <!-- Replace the entire Main Section with this -->
+        <!-- Main Section -->
         <div class="section-header">
             <h1>Main Section</h1>
         </div>
 
-        <div class="form-container">
+        <div class="main-section-container">
             <!-- Latest Post Form -->
             <form id="latest" class="content-form">
                 <h2>Latest Post</h2>
@@ -62,11 +62,6 @@
             <!-- Featured Posts Container -->
             <div id="featured-posts-container">
                 <!-- Featured posts forms will be generated here -->
-            </div>
-
-            <!-- Featured Projects Container -->
-            <div id="featured-projects-container">
-                <!-- Featured projects forms will be generated here -->
             </div>
         </div>
 
