--- a/manage/index.html
+++ b/manage/index.html
@@ -1,175 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manage Posts</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="index.js" defer></script>
+    <title>Beyond Me BTW - Dashboard</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #333;
+        }
+
+        .container {
+            background: rgba(255, 255, 255, 0.95);
+            padding: 3rem;
+            border-radius: 20px;
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            max-width: 500px;
+            width: 90%;
+            backdrop-filter: blur(10px);
+        }
+
+        .welcome-text {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            color: #4a5568;
+            font-weight: 300;
+        }
+
+        .name {
+            color: #667eea;
+            font-weight: 600;
+        }
+
+        .subtitle {
+            font-size: 1.1rem;
+            color: #718096;
+            margin-bottom: 3rem;
+        }
+
+        /* Login Form Styles */
+        .login-form {
+            margin-bottom: 2rem;
+        }
+
+        .form-group {
+            margin-bottom: 1.5rem;
+            text-align: left;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 0.5rem;
+            font-weight: 600;
+            color: #4a5568;
+        }
+
+        input[type="password"] {
+            width: 100%;
+            padding: 1rem;
+            border: 2px solid #e2e8f0;
+            border-radius: 10px;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+            background: rgba(255, 255, 255, 0.8);
+        }
+
+        input[type="password"]:focus {
+            outline: none;
+            border-color: #667eea;
+            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+        }
+
+        .login-btn {
+            width: 100%;
+            padding: 1rem;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            border: none;
+            border-radius: 10px;
+            font-size: 1.1rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            margin-top: 1rem;
+        }
+
+        .login-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 10px 20px rgba(102, 126, 234, 0.3);
+        }
+
+        .login-btn:disabled {
+            opacity: 0.7;
+            cursor: not-allowed;
+            transform: none;
+        }
+
+        /* Navigation Buttons */
+        .nav-buttons {
+            display: none;
+            flex-direction: column;
+            gap: 1.5rem;
+        }
+
+        .nav-btn {
+            padding: 1.5rem 2rem;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            text-decoration: none;
+            border-radius: 15px;
+            font-size: 1.3rem;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            border: none;
+            cursor: pointer;
+            display: block;
+            text-align: center;
+        }
+
+        .nav-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 15px 30px rgba(102, 126, 234, 0.4);
+            background: linear-gradient(135deg, #764ba2 0%, #667eea 100%);
+        }
+
+        .nav-btn:active {
+            transform: translateY(0);
+        }
+
+        .posts-btn {
+            background: linear-gradient(135deg, #ff6b6b 0%, #ee5a24 100%);
+        }
+
+        .posts-btn:hover {
+            background: linear-gradient(135deg, #ee5a24 0%, #ff6b6b 100%);
+            box-shadow: 0 15px 30px rgba(255, 107, 107, 0.4);
+        }
+
+        .minis-btn {
+            background: linear-gradient(135deg, #4ecdc4 0%, #26d0ce 100%);
+        }
+
+        .minis-btn:hover {
+            background: linear-gradient(135deg, #26d0ce 0%, #4ecdc4 100%);
+            box-shadow: 0 15px 30px rgba(78, 205, 196, 0.4);
+        }
+
+        .content-btn {
+            background: linear-gradient(135deg, #a8e6cf 0%, #4ecdc4 100%);
+        }
+
+        .content-btn:hover {
+            background: linear-gradient(135deg, #4ecdc4 0%, #a8e6cf 100%);
+            box-shadow: 0 15px 30px rgba(168, 230, 207, 0.4);
+        }
+
+        .error {
+            color: #e53e3e;
+            margin-top: 1rem;
+            font-weight: 500;
+        }
+
+        @media (max-width: 600px) {
+            .container {
+                padding: 2rem;
+                margin: 1rem;
+            }
+
+            .welcome-text {
+                font-size: 2rem;
+            }
+
+            .nav-btn {
+                padding: 1.2rem 1.5rem;
+                font-size: 1.1rem;
+            }
+        }
+    </style>
 </head>
-
 <body>
-    <!-- Login Form -->
-    <div id="login-container" class="login-container">
-        <form id="login-form" class="login-form">
-            <h2>Admin Login</h2>
-            <label for="login-password">Password:</label>
-            <input type="password" id="login-password" name="key" required>
-            <button type="submit">Login</button>
-        </form>
+    <div class="container">
+        <!-- Login Form -->
+        <div id="login-container">           
+            
+            <form id="login-form" class="login-form">
+                <div class="form-group">
+                    <label for="login-password">Password:</label>
+                    <input type="password" id="login-password" required>
+                </div>
+                <button type="submit" class="login-btn">Login</button>
+            </form>
+            <div id="error-message" class="error" style="display: none;"></div>
+        </div>
+
+        <!-- Navigation Buttons (shown after login) -->
+        <div id="nav-container" class="nav-buttons">
+            <h1 class="welcome-text">Welcome <span class="name">Pranav</span></h1>            
+            
+            <a href="manage.html" class="nav-btn posts-btn">Posts</a>
+            <a href="minis.html" class="nav-btn minis-btn">Minis</a>
+            <a href="https://content.beyondmebtw.com" class="nav-btn content-btn" target="_blank">Content</a>
+        </div>
     </div>
 
-    <!-- Content Forms-->
-    <div id="content-container" class="content-container" style="display:none;">
-        <div class="main-section-container">
-            <!-- Latest Post Form -->
-            <form id="latest" class="content-form">
-                <h2>Latest Post</h2>
-                <div id="latest-display" class="current-data">
-                    <!-- Current data will be displayed here -->
-                </div>
-
-                <input type="hidden" name="instance" value="latest">
-
-                <label for="name-latest">Post Name:</label>
-                <input type="text" id="name-latest" name="name">
-
-                <label for="date-latest">Publish Date:</label>
-                <input type="date" id="date-latest" name="date">
-
-                <label for="excerpt-latest">Excerpt:</label>
-                <textarea id="excerpt-latest" name="excerpt" rows="3"></textarea>
-
-                <label for="thumbnail-latest">Thumbnail URL:</label>
-                <input type="text" id="thumbnail-latest" name="thumbnail">
-
-                <label for="link-latest">Post Link:</label>
-                <input type="text" id="link-latest" name="link">
-
-                <label for="key-latest">Password:</label>
-                <input type="password" id="key-latest" name="key" required>
-
-                <button type="submit">Update Latest Post</button>
-            </form>
-
-            <!-- Featured Posts Container -->
-            <div id="featured-posts-container">
-                <!-- Featured posts forms will be generated here -->
-            </div>
-        </div>
-
-        <!-- Blog Section -->
-        <div class="section-header">
-            <h1>Blog Section</h1>
-        </div>
-
-        <div class="form-container">
-            <!-- Blog Post Add Form -->
-            <form id="blog-form" class="blog-form">
-                <h2 id="blog-form-title">Add New Blog Post</h2>
-
-                <label for="blog-category">Category:</label>
-                <select id="blog-category" name="category" required>
-                    <option value="">Select Category</option>
-                    <option value="f1arti">F1 Articles</option>
-                    <option value="movietv">Movie/TV</option>
-                    <option value="experience">Experience</option>
-                    <option value="techart">Tech Articles</option>
-                </select>
-
-                <label for="blog-uid">UID:</label>
-                <input type="text" id="blog-uid" name="uid" placeholder="e.g., tech_001" required>
-
-                <label for="blog-title">Title:</label>
-                <input type="text" id="blog-title" name="title" required>
-
-                <label for="blog-date">Date:</label>
-                <input type="date" id="blog-date" name="date" required>
-
-                <label for="blog-excerpt">Excerpt:</label>
-                <input type="text" id="blog-excerpt" name="excerpt" required>
-
-                <label for="blog-thumbnail">Thumbnail URL:</label>
-                <input type="text" id="blog-thumbnail" name="thumbnail" required>
-
-                <label for="blog-link">Link:</label>
-                <input type="text" id="blog-link" name="link" required>
-
-                <label for="blog-subcategory">Subcategory (Optional):</label>
-                <input type="text" id="blog-subcategory" name="subcategory">
-
-                <label for="blog-secondary-category">Secondary Category (Optional):</label>
-                <input type="text" id="blog-secondary-category" name="secondaryCategory">
-
-                <label for="blog-secondary-subcategory">Secondary Subcategory (Optional):</label>
-                <input type="text" id="blog-secondary-subcategory" name="secondarySubcategory">
-
-                <div class="form-actions">
-                    <label>
-                        <input type="checkbox" id="is-new-post" name="isNewPost" checked>
-                        <span>✓ ADD AS NEW POST</span>
-                    </label>
-                    <div style="font-size: 12px; margin-top: 5px; opacity: 0.9;">
-                        This form only adds new blog posts. Make sure all required fields are filled.
-                    </div>
-                </div>
-
-                <label for="blog-key">Password:</label>
-                <input type="password" id="blog-key" name="key" required>
-
-                <button type="submit">Add New Post</button>
-                <button type="button" id="clear-blog-form">Clear Form</button>
-            </form>
-
-            <!-- Blog Display Section -->
-            <div class="blog-display">
-                <h2>Latest Posts by Category</h2>
-
-                <!-- F1 Articles Section -->
-                <div class="category-section">
-                    <div class="category-title">F1 Articles</div>
-
-                    <div class="subcategory-section">
-                        <div class="subcategory-title">2025 Season</div>
-                        <div id="f1-2025-latest" class="no-posts">Loading...</div>
-                    </div>
-
-                    <div class="subcategory-section">
-                        <div class="subcategory-title">General</div>
-                        <div id="f1-general-latest" class="no-posts">Loading...</div>
-                    </div>
-                </div>
-
-                <!-- Movie/TV Section -->
-                <div class="category-section">
-                    <div class="category-title">Movie/TV</div>
-
-                    <div class="subcategory-section">
-                        <div class="subcategory-title">Movies</div>
-                        <div id="movie-latest" class="no-posts">Loading...</div>
-                    </div>
-
-                    <div class="subcategory-section">
-                        <div class="subcategory-title">TV</div>
-                        <div id="tv-latest" class="no-posts">Loading...</div>
-                    </div>
-                </div>
-
-                <!-- Experience Section -->
-                <div class="category-section">
-                    <div class="category-title">Experience</div>
-                    <div id="experience-latest" class="no-posts">Loading...</div>
-                </div>
-
-                <!-- Tech Articles Section -->
-                <div class="category-section">
-                    <div class="category-title">Tech Articles</div>
-                    <div id="tech-latest" class="no-posts">Loading...</div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- Use your existing index.js file -->
+    <script src="index.js"></script>
 </body>
-
 </html>
