--- a/manage/minis.html
+++ b/manage/minis.html
@@ -4,84 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minis</title>
+    <title>Minis - Content Creator</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="index.js" defer></script>
-    <style>
-        /* Basic styling for minis page */
-        .minis-container {
-            padding: 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .minis-header {
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-
-        .minis-content {
-            background: white;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .back-button {
-            display: inline-block;
-            padding: 0.5rem 1rem;
-            background: #667eea;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-bottom: 1rem;
-        }
-
-        .back-button:hover {
-            background: #764ba2;
-        }
-
-        #auth-loading {
-            text-align: center;
-            padding: 50px;
-            font-size: 1.2rem;
-            color: #666;
-        }
-    </style>
+    <link rel="stylesheet" href="minis.css">
 </head>
 
 <body>
-    <!-- Content Container -->
-    <div id="content-container" class="minis-container" style="display: none;">
-        <a href="index.html" class="back-button">← Back to Dashboard</a>
-        
-        <div class="minis-header">
-            <h1>Minis Page</h1>
-            <p>This is the minis section of your dashboard.</p>
-        </div>
+    <div class="container">
+        <header>
+            <h1>Minis Content Creator</h1>
+            <p>Write your content with Markdown support and drag & drop images</p>
+        </header>
 
-        <div class="minis-content">
-            <h2>Minis Content</h2>
-            <p>Add your minis-specific content here. This page is protected by authentication.</p>
-            
-            <!-- Add your minis functionality here -->
-            <div class="placeholder-content">
-                <h3>Features to add:</h3>
-                <ul>
-                    <li>Mini post management</li>
-                    <li>Quick updates</li>
-                    <li>Media uploads</li>
-                    <li>Draft management</li>
-                </ul>
-            </div>
-        </div>
+        <main>
+            <form id="contentForm" class="content-form">
+                <div class="form-group">
+                    <label for="title">Title</label>
+                    <input type="text" id="title" name="title" placeholder="Enter your title..." required>
+                </div>
+
+                <div class="form-group">
+                    <label for="tags">Tags (comma-separated)</label>
+                    <input type="text" id="tags" name="tags" placeholder="blog, update, tutorial...">
+                </div>
+
+                <div class="form-group">
+                    <label for="content">Content (Markdown supported)</label>
+                    <div class="textarea-container">
+                        <textarea id="content" name="content" placeholder="Write your content here... 
+
+Supports Markdown:
+- **bold** and *italic*
+- [links](https://example.com)
+- ![images](image-url)
+- # Headers
+- - Lists
+
+You can also drag and drop images directly into this text area!" rows="20" required></textarea>
+                        <div id="dropOverlay" class="drop-overlay">
+                            <div class="drop-message">
+                                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2">
+                                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                                    <circle cx="8.5" cy="8.5" r="1.5"></circle>
+                                    <polyline points="21,15 16,10 5,21"></polyline>
+                                </svg>
+                                <p>Drop images here to add them to your content</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-actions">
+                    <button type="submit" id="submitBtn" class="submit-btn">
+                        <span class="btn-text">Create Mini</span>
+                        <span class="btn-loader" style="display: none;">Creating...</span>
+                    </button>
+                </div>
+            </form>
+
+            <div id="statusMessage" class="status-message" style="display: none;"></div>
+        </main>
     </div>
 
-    <!-- Loading/Auth Check Message -->
-    <div id="auth-loading">
-        <h2>Checking authentication...</h2>
-        <p>Redirecting if not authenticated...</p>
-    </div>
+    <script src="script.js"></script>
+    <script src="minis.js"></script>
 </body>
 
 </html>
