--- a/manage/minis.html
+++ b/manage/minis.html
@@ -67,7 +67,7 @@ You can also drag and drop images directly into this text area!" rows="20" requi
         </main>
     </div>
 
-    <script src="script.js"></script>
+    <script src="index.js"></script>
     <script src="minis.js"></script>
 </body>
 
