--- a/minis/backend/minis.html
+++ b/minis/backend/minis.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minis - Content Creator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/manage/styles.css">
     <link rel="stylesheet" href="minis.css">
 </head>
 
@@ -67,7 +67,7 @@ You can also drag and drop images directly into this text area!" rows="20" requi
         </main>
     </div>
 
-    <script src="index.js"></script>
+    <script src="https://beyondmebtw.com/manage/index.js"></script>
     <script src="minis.js"></script>
 </body>
 
