--- a/manage/index.html
+++ b/manage/index.html
@@ -190,7 +190,7 @@
             <h1 class="welcome-text">Welcome <span class="name">Pranav</span></h1>            
             
             <a href="manage.html" class="nav-btn posts-btn">Posts</a>
-            <a href="minis.html" class="nav-btn minis-btn">Minis</a>
+            <a href="https://beyondmebtw.com/minis/minis.html" class="nav-btn minis-btn">Minis</a>
             <a href="https://content.beyondmebtw.com" class="nav-btn content-btn" target="_blank">Content</a>
         </div>
     </div>
