--- a/minis/backend/minis.html
+++ b/minis/backend/minis.html
@@ -67,7 +67,7 @@ You can also drag and drop images directly into this text area!" rows="20" requi
         </main>
     </div>
 
-    <script src="https://beyondmebtw.com/manage/index.js"></script>
+    <script src="https://beyondmebtw.com/manage/authentication.js"></script>
     <script src="minis.js"></script>
 </body>
 
