--- a/manage/index.html
+++ b/manage/index.html
@@ -197,5 +197,6 @@
 
     <!-- Use your existing index.js file -->
     <script src="index.js"></script>
+    <script src="authentication.js"></script>
 </body>
 </html>
