--- a/manage/manage.html
+++ b/manage/manage.html
@@ -7,6 +7,7 @@
     <title>Manage Posts</title>
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
+    <script src="authentication.js"></script>
 </head>
 
 <body>
