--- a/manage/index.html
+++ b/manage/index.html
@@ -191,18 +191,7 @@
         <div id="nav-container" class="nav-buttons">
             <h1 class="welcome-text">Welcome <span class="name">Pranav</span></h1>
 
-            <button id="logout-btn" class="logout-btn" style="
-    padding: 0.8rem 1.5rem;
-    background: linear-gradient(135deg, #ff6b6b 0%, #ee5a24 100%);
-    color: white;
-    border: none;
-    border-radius: 10px;
-    font-size: 1rem;
-    font-weight: 600;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    margin-top: 1rem;
-">Logout</button>
+            <button id="logout-btn" class="logout-btn" style="padding: 0.8rem 1.5rem;background: linear-gradient(135deg, #ff6b6b 0%, #ee5a24 100%);color: white;border: none;border-radius: 10px;font-size: 1rem;font-weight: 600;cursor: pointer;transition: all 0.3s ease;margin-top: 1rem;">Logout</button>
 
             <a href="manage.html" class="nav-btn posts-btn">Posts</a>
             <a href="https://minis.beyondmebtw.com/backend/minis.html" class="nav-btn minis-btn">Minis</a>
