--- a/minis/index.html
+++ b/minis/index.html
@@ -17,10 +17,15 @@
 
 <body>
     <div class="header-container">
+        <div></div> <!-- Empty div to push home button to the right -->
+        <div class="page-title">
+            <span class="minis">Minis</span>
+            <span class="by-text">by</span>
+            <span class="brand">Beyond Me Btw</span>
+        </div>
         <a href="https://beyondmebtw.com" class="home-button">
             <i class="fas fa-home"></i> Home
         </a>
-        <h1 class="page-title">Minis<br>by<br>Beyond Me Btw</h1>
     </div>
 
     <div class="main-container">
