--- a/minis/index.html
+++ b/minis/index.html
@@ -17,15 +17,12 @@
 
 <body>
     <div class="header-container">
-        <div></div> <!-- Empty div to push home button to the right -->
-        <div class="page-title">
-            <span class="minis">Minis</span>
-            <span class="by-text">by</span>
-            <span class="brand">Beyond Me Btw</span>
-        </div>
         <a href="https://beyondmebtw.com" class="home-button">
             <i class="fas fa-home"></i> Home
         </a>
+        <h1 class="page-title">
+            <span class="minis">Minis</span> by <span class="brand">Beyond Me Btw</span>
+        </h1>
     </div>
 
     <div class="main-container">
