--- a/minis/index.html
+++ b/minis/index.html
@@ -27,18 +27,16 @@
 
     <div class="main-container">
         <div class="intro-section">
-            <h2>Minis</h2>
+            <h2>What is Mini's?</h2>
             <p><strong>Minis</strong> is my space for short-form writing like quick thoughts, updates, and little ideas
-                that don't need a full blog post. Unlike my longer essays, Minis let me share more casually and more
+                that don't need a full blog post. Unlike my longer essays, <strong>Minis</strong> let me share more casually and more
                 often, whether it's a passing thought, something I'm working on, or just something I feel like putting
                 out there.</p>
         </div>
 
         <div class="content-section">
-            <div id="postsContainer">
-                <!-- Posts will be loaded here -->
+            <div id="postsContainer">                
             </div>
-
             <div class="loading-container" id="loadingContainer">
                 <div class="loading-spinner" id="loadingSpinner" style="display: none;"></div>
                 <button class="load-more-btn" id="loadMoreBtn" style="display: none;">Load More Posts</button>
