--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <link rel="stylesheet" href="https://beyondmebtw.com/css/projects-showcase.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive.css">
 
-        <!-- <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="minis/index.css">
+
+    <!-- <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/profile-card.css">
     <link rel="stylesheet" href="css/welcome-card.css">
     <link rel="stylesheet" href="css/latest-post.css">
@@ -35,6 +37,11 @@
 </head>
 
 <body>
+    <button class="minis-button">
+        <img src="minis/minis.png" alt="3D Book Icon" class="minis-button-icon">
+        <span class="minis-button-text">Mini's</span>
+    </button>
+
     <header>
         <div id="name">Beyond Me Btw</div>
         <div id="links">
@@ -192,7 +199,7 @@
         <!-- Featured Posts -->
         <div class="bento-item featured-posts">
             <h2 class="section-title">Featured Posts</h2>
-            <div class="featured-posts-container" id="featured-posts-container">                
+            <div class="featured-posts-container" id="featured-posts-container">
             </div>
             <a href="https://beyondmetw.com/blog" class="view-all-btn">View All Posts</a>
         </div>
@@ -200,7 +207,7 @@
         <!-- Projects Grid -->
         <div class="bento-item projects-showcase">
             <h2 class="section-title">Featured Projects</h2>
-            <div class="projects-grid" id="projects-grid">                
+            <div class="projects-grid" id="projects-grid">
             </div>
             <a href="https://beyondmebtw.com/projects" class="view-all-btn">View All Projects</a>
         </div>
