--- a/minis/index.html
+++ b/minis/index.html
@@ -9,13 +9,18 @@
     <title>Minis | BeyondMeBtw</title>
     <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/favicon.ico">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kavoon&family=Kreon:wght@300&family=Permanent+Marker&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kavoon&family=Kreon:wght@400&family=Permanent+Marker&display=swap');
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
+    <button class="minis-button">
+        <img src="minis.png" alt="3D Book Icon" class="minis-button-icon">
+        <span class="minis-button-text">Mini's</span>
+    </button>
+
     <div class="header-container">
         <a href="https://beyondmebtw.com" class="home-button">
             <i class="fas fa-home"></i> Home
@@ -28,14 +33,15 @@
     <div class="main-container">
         <div class="intro-section">
             <h2>What is Mini's?</h2>
-            <p><strong>Minis</strong> is my space for short-form writing like quick thoughts, updates, and little ideas
-                that don't need a full blog post. Unlike my longer essays, <strong>Minis</strong> let me share more casually and more
-                often, whether it's a passing thought, something I'm working on, or just something I feel like putting
-                out there.</p>
+            <p><strong>Minis</strong> is my space for short posts like quick thoughts, updates, and ideas that don’t
+                need a
+                full blog.
+                It’s a casual way to share more often, without the long essays.</p>
         </div>
 
         <div class="content-section">
-            <div id="postsContainer">                
+            <div id="postsContainer">
+
             </div>
             <div class="loading-container" id="loadingContainer">
                 <div class="loading-spinner" id="loadingSpinner" style="display: none;"></div>
