--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <body>
     <button class="minis-button">
-        <img src="minis/minis.png" alt="3D Book Icon" class="minis-button-icon">
+        <img src="https://beyondmebtw.com/assets/images/minis.png" alt="3D Book Icon" class="minis-button-icon">
         <span class="minis-button-text">Mini's</span>
     </button>
 
