--- a/about/index.html
+++ b/about/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="skills.css">
     <link rel="stylesheet" href="experience.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/specials.css">
 </head>
 
 <body>
@@ -36,6 +37,10 @@
             <div id="projects" class="link">Projects</div>
             <div id="about" class="link">About</div>
         </div>
+        <button class="minis-button" onclick="window.open('https://minis.beyondmebtw.com')">
+            <img src="https://beyondmebtw.com/assets/images/minis.png" alt="3D Book Icon" class="minis-button-icon">
+            <span class="minis-button-text">Mini's</span>
+        </button>
     </header>
 
     <div class="bento-container">
@@ -189,7 +194,8 @@
         <!-- Skills Section -->
         <div class="bento-item skills">
             <h2 class="section-title">Skills</h2>
-            <p style="font-size: 20px;">I've developed a diverse skillset through academic pursuits and personal projects such as:</p>
+            <p style="font-size: 20px;">I've developed a diverse skillset through academic pursuits and personal
+                projects such as:</p>
 
             <div class="skills-container">
 
@@ -258,7 +264,8 @@
                         <div class="skill-tag">Content Creation</div>
                         <div class="skill-tag">Digital Marketing</div>
                     </div>
-                    <div class="skill-application">Applied to improve user experience in various projects along with design posters and promotional materials.</div>
+                    <div class="skill-application">Applied to improve user experience in various projects along with
+                        design posters and promotional materials.</div>
                 </div>
 
                 <div class="skill-category">
@@ -269,7 +276,8 @@
                         <div class="skill-tag">Public Speaking</div>
                         <div class="skill-tag">Sponsorship</div>
                     </div>
-                    <div class="skill-application">Coordinated events and projects, ensuring smooth execution and stakeholder engagement.</div>
+                    <div class="skill-application">Coordinated events and projects, ensuring smooth execution and
+                        stakeholder engagement.</div>
                 </div>
 
             </div>
