--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <link rel="stylesheet" href="https://beyondmebtw.com/css/featured-posts.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/projects-showcase.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/specials.css">
 
-    <link rel="stylesheet" href="minis/index.css">
+
 
     <!-- <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/profile-card.css">
@@ -37,11 +38,6 @@
 </head>
 
 <body>
-    <button class="minis-button">
-        <img src="https://beyondmebtw.com/assets/images/minis.png" alt="3D Book Icon" class="minis-button-icon">
-        <span class="minis-button-text">Mini's</span>
-    </button>
-
     <header>
         <div id="name">Beyond Me Btw</div>
         <div id="links">
@@ -50,6 +46,10 @@
             <div id="projects" class="link">Projects</div>
             <div id="about" class="link">About</div>
         </div>
+        <button class="minis-button" onclick="window.open('https://minis.beyondmebtw.com')">
+            <img src="https://beyondmebtw.com/assets/images/minis.png" alt="3D Book Icon" class="minis-button-icon">
+            <span class="minis-button-text">Mini's</span>
+        </button>
     </header>
 
     <div class="bento-grid">
