--- a/projects/index.html
+++ b/projects/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="projgrid.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/specials.css">
 
     <!-- Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
@@ -32,6 +33,10 @@
             <div id="projects" class="link">Projects</div>
             <div id="about" class="link">About</div>
         </div>
+        <button class="minis-button" onclick="window.open('https://minis.beyondmebtw.com')">
+            <img src="https://beyondmebtw.com/assets/images/minis.png" alt="3D Book Icon" class="minis-button-icon">
+            <span class="minis-button-text">Mini's</span>
+        </button>
     </header>
 
     <div id="app">
