--- a/index.html
+++ b/index.html
@@ -208,6 +208,59 @@
         <div class="bento-item projects-showcase">
             <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid" id="projects-grid">
+                <div class="project-card">
+                    <div class="project-details">
+                        <div class="project-icon">📚</div>
+                        <div>
+                            <h3 class="project-title">My Library</h3>
+                            <p class="project-desc">A personal library organizer where you can scan books and access
+                                them anytime</p>
+                        </div>
+                    </div>
+                    <a href="https://library.beyondmebtw.com" target="_blank">
+                        <button class="project-explore">Explore</button>
+                    </a>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-details">
+                        <div class="project-icon">🌐</div>
+                        <div>
+                            <h3 class="project-title">Gradient Club Website</h3>
+                            <p class="project-desc">The official website of the Gradient student Club at BMSCE</p>
+                        </div>
+                    </div>
+                    <a href="https://gradientaiml.tech" target="_blank">
+                        <button class="project-explore">Explore</button>
+                    </a>
+                </div>
+                <div class="project-card">
+                    <div class="project-details">
+                        <div class="project-icon">🏎️</div>
+                        <div>
+                            <h3 class="project-title">F1 Haptic Trailer: Android Recreation</h3>
+                            <p class="project-desc">A recreation of the F1 haptic trailer designed for android devices
+                                playable on browsers</p>
+                        </div>
+                    </div>
+                    <a href="https://beyondmebtw.com/projects/f1hapticandroid" target="_blank">
+                        <button class="project-explore">Explore</button>
+                    </a>
+                </div>
+                <div class="project-card">
+                    <div class="project-details">
+                        <div class="project-icon">🚗</div>
+                        <div>
+                            <h3 class="project-title">Real Time Driver Monitoring System</h3>
+                            <p class="project-desc">An application that uses AI, ML and Computer vision technology to
+                                help enhance road safety.</p>
+                        </div>
+                    </div>
+                    <a href="https://github.com/pranav1211/RTDMS" target="_blank">
+                        <button class="project-explore">Explore</button>
+                    </a>
+                </div>
+
             </div>
             <a href="https://beyondmebtw.com/projects" class="view-all-btn">View All Projects</a>
         </div>
