--- a/minis/index.html
+++ b/minis/index.html
@@ -27,7 +27,7 @@
 
     <div class="main-container">
         <div class="intro-section">
-            <h2>What is Mini's?</h2>
+            <h2>What is Minis?</h2>
             <p><strong>Minis</strong> is my space for short posts like quick thoughts, updates, and ideas that don’t
                 need a
                 full blog.
