--- a/projects/index.html
+++ b/projects/index.html
@@ -35,7 +35,7 @@
         </div>
         <button class="minis-button" onclick="window.open('https://minis.beyondmebtw.com')">
             <img src="https://beyondmebtw.com/assets/images/minis.png" alt="3D Book Icon" class="minis-button-icon">
-            <span class="minis-button-text">Mini's</span>
+            <span class="minis-button-text">Minis</span>
         </button>
     </header>
 
