--- a/minis/index.html
+++ b/minis/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Minis by BeyondMeBtw - Short-form writing, quick thoughts, updates, and little ideas that don't need a full blog post.">
     <title>Minis | BeyondMeBtw</title>
-    <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/minis.ico">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kavoon&family=Kreon:wght@400&family=Permanent+Marker&display=swap');
     </style>
