--- a/minis/index.html
+++ b/minis/index.html
@@ -17,21 +17,21 @@
 
 <body>
     <div class="header-container">
+        <h1 class="page-title">
+            <span class="minis">Minis</span>by<span class="brand">Beyond Me Btw</span>
+        </h1>
         <a href="https://beyondmebtw.com" class="home-button">
             <i class="fas fa-home"></i> Home
         </a>
-        <h1 class="page-title">
-            <span class="minis">Minis</span> by <span class="brand">Beyond Me Btw</span>
-        </h1>
     </div>
 
     <div class="main-container">
         <div class="intro-section">
             <h2>What is Minis?</h2>
-            <p><strong>Minis</strong> is my space for short posts like quick thoughts, updates, and ideas that don’t
+            <p><strong>Minis</strong> is my space for short posts like quick thoughts, updates, and ideas that don't
                 need a
                 full blog.
-                It’s a casual way to share more often, without the long essays.</p>
+                It's a casual way to share more often, without writing long essays.</p>
         </div>
 
         <div class="content-section">
