--- a/minis/index.html
+++ b/minis/index.html
@@ -49,6 +49,13 @@
         </div>
     </div>
 
+    <div id="footer">
+        <div>
+            © 2022-Present. Beyond Me Btw created by <a href="https://beyondmebtw.com/about"
+                style="color: black; text-decoration: none; font-weight: bold;" target="_blank">Pranav Veeraghanta.</a>
+        </div>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/9.1.2/marked.min.js"></script>
     <script src="index.js"></script>
 </body>
