--- a/minis/backend/minis.html
+++ b/minis/backend/minis.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minis - Content Creator</title>
-    <link rel="stylesheet" href="https://beyondmebtw.com/manage/styles.css">    
+    <link rel="stylesheet" href="https://beyondmebtw.com/manage/styles.css">
     <link rel="stylesheet" href="minis.css">
 </head>
 
@@ -16,50 +16,71 @@
         </header>
 
         <main>
-            <form id="contentForm" class="content-form">
-                <div class="form-group">
-                    <label for="title">Title</label>
-                    <input type="text" id="title" name="title" placeholder="Enter your title..." required>
-                </div>
+            <div class="content-wrapper">
+                <!-- Form Section -->
+                <div>
+                    <form id="contentForm" class="content-form">
+                        <div class="form-group">
+                            <label for="title">Title</label>
+                            <input type="text" id="title" name="title" placeholder="Enter your title..." required>
+                        </div>
 
-                <div class="form-group">
-                    <label for="tags">Tags (comma-separated)</label>
-                    <input type="text" id="tags" name="tags" placeholder="blog, update, tutorial...">
-                </div>
+                        <div class="form-group">
+                            <label for="tags">Tags (comma-separated)</label>
+                            <input type="text" id="tags" name="tags" placeholder="blog, update, tutorial...">
+                        </div>
 
-                <div class="form-group">
-                    <label for="password">Authentication Key</label>
-                    <input type="password" id="password" name="password" placeholder="Auto-filled from authentication..." required readonly>
-                </div>
+                        <div class="form-group">
+                            <label for="password">Authentication Key</label>
+                            <input type="password" id="password" name="password"
+                                placeholder="Auto-filled from authentication..." required readonly>
+                        </div>
 
-                <div class="form-group">
-                    <label for="content">Content (Markdown supported)</label>
-                    <textarea id="content" name="content" placeholder="Write your content here... 
+                        <div class="form-group">
+                            <label for="content">Content (Markdown supported)</label>
+                            <textarea id="content" name="content" placeholder="Write your content here... 
 
 Supports Markdown:
 
--> **bold** and *italic*
--> [links](https://example.com)
--> ![images](image-url)
--> # Headers
--> - Lists
+**bold** and *italic*
+[links](https://example.com)
+![images](image-url)
+# Headers
+## Subheaders
+- Lists
+> Blockquotes
+`code`
 
-" rows="20" required></textarea>
+" required></textarea>
+                        </div>
+
+                        <div class="form-actions">
+                            <button type="submit" id="submitBtn" class="submit-btn">
+                                <span class="btn-text">Create Mini</span>
+                                <span class="btn-loader" style="display: none;">Creating...</span>
+                            </button>
+                        </div>
+                    </form>
+
+                    <div id="statusMessage" class="status-message" style="display: none;"></div>
                 </div>
 
-                <div class="form-actions">
-                    <button type="submit" id="submitBtn" class="submit-btn">
-                        <span class="btn-text">Create Mini</span>
-                        <span class="btn-loader" style="display: none;">Creating...</span>
-                    </button>
+                <!-- Preview Section -->
+                <div class="preview-panel">
+                    <div class="preview-header">
+                        <h3>Live Preview</h3>
+                    </div>
+                    <div id="previewContent" class="preview-content">
+                        <div class="preview-placeholder">
+                            Type in the content area to see a live preview here...
+                        </div>
+                    </div>
                 </div>
-            </form>
-
-            <div id="statusMessage" class="status-message" style="display: none;"></div>
+            </div>
         </main>
     </div>
 
-    <!-- <script src="https://beyondmebtw.com/manage/authentication.js"></script> -->
+
     <script src="minis.js"></script>
 </body>
 
